# graphsight

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
.claude/skills/flowchart-to-mermaid/: SKILL.md
adr/0001-decouple-node-identity/: index.html
adr/0002-decouple-node-identity/: index.html
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  index.md  installation.md  usage.md
docs/adr/: 0001-decouple-node-identity.md  0002-decouple-node-identity.md  003-structured-history-context.md  004-adr-agentic-architecture-with-cv-tools.md
installation/: index.html
samples/: sample-12-4o-synth.mmd  sample-12-agent.mmd  sample-12.mmd  sample-2.mmd  sample-5-4o-synth.mmd  sample-6-4o-synth.mmd  sample-6-4o.mmd  sample-6-grid-1.mmd  sample-6-grid.mmd  sample-6.mmd  sample-7-1.mmd  sample-7-2.mmd  sample-7-4o-synth.mmd  sample-7-4o.mmd  sample-7-5.2-nogrid.mmd  sample-7-5.2.mmd  sample-7.mmd
scripts/: benchmark.py
search/: search_index.json
src/: main.py  mermaid_to_json.py  preview_grid.py  visualilze_graph.py
src/graphsight/: __init__.py  api.py  cli.py  models.py
src/graphsight/agent/: another_core.py  another_corev3.py  core.py  prompts.py  schema.py
src/graphsight/bridge/: client.py  mermaid_parser.mjs
src/graphsight/classifier/: detector.py
src/graphsight/core/: engine.py
src/scripts/: mermaid_to_json.py
tests/: test_strageties_flowchart_identity.py
usage/: index.html
(+34 files in other folders)
