[project]
name = "graphsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neel Bauman", email = "neel.bauman@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautyspot[dashboard]==2.5.2",
    "langchain>=1.2.9",
    "langchain-ai>=0.1.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "openai>=2.15.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
    "update>=0.0.1",
]

[project.scripts]
graphsight = "graphsight.cli:app"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "beautyspot>=2.0.0",
]
test = [
    "pytest>=9.0.2",
]
